--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,13 @@
 .lab{
     width: 100%;
     height: 100vh;
+    /* display: none; */
     display: flex;
     justify-content: center;
     align-items: center;
     
 }
+
 .lab button{
     margin-top: 30px;
     width: 100px;
@@ -98,6 +100,9 @@ table thead tr th{
 }
 table th {
     border: 1px solid black;
+}
+thead th i{
+    color: red;
 }
 table td{
     border: 1px solid black;
